Added Main Components, TODO: Implement them

--- a/matheorems/public/index.html
+++ b/matheorems/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <script src="./lib/ggb.js"/></script>
+    <script src="%PUBLIC_URL%/lib/ggb.js"/></script>
     
     <!--
       manifest.json provides metadata used when your web app is added to the
@@ -31,7 +31,7 @@
     </div>
 
     <div id='ggb-element'>
-        <script src="./lib/inject.js"></script>
+        <script src="%PUBLIC_URL%/lib/inject.js"></script>
     </div>
     <!--
       This HTML file is a template.
